# DeepShader

./: .gitignore  LICENSE  main.py  make_grid.py  make_grid.sh  make_grid_full.sh  profile_vram.py  pyproject.toml  train.py
chat_with_my_agent/: 00_2026_06_02_agent_skill-and-project-setup.md  01_2026_06_02_agent_dinov3-model-specifications.md  02_2026_06_02_agent_animepro-flux-vae-analysis.md  03_2026_06_03_agent_tagged-anime-illustrations-dataset-lookup.md  04_2026_06_03_agent_dataset-object-pytorch-transforms.md  05_2026_06_03_agent_dataset-size-and-ram-check.md  06_2026_06_03_agent_nas-speed-test.md  07_2026_06_03_agent_scan-dataset-cache.md  07_2026_06_03_agent_test-suite.md  09_2026_06_03_human_vae-direct-feature-decode.md  10_2026_06_03_agent_full-pipeline-poc-complete.md  10_2026_06_03_human_full-pipeline-poc-complete.md  11_2026_06_03_agent_mini-batch-training-poc.md  12_2026_06_03_agent_overfit-experiment.md  13_2026_06_03_agent_training-pipeline-restructure.md  14_2026_06_04_agent_vram-problem-diagnosis.md  15_2026_06_04_human_pre-encode-cache-pipeline.md  16_2026_06_04_agent_cache-architecture-design.md  17_2026_06_04_agent_cache-pipeline-implementation.md  18_2026_06_04_agent_trainer-and-train-py-double-mode.md  19_2026_06_04_agent_encode-py-refactor-and-fix.md  20_2026_06_05_agent_pre-encode-complete.md  21_2026_06_05_agent_cached-oom-fix-and-resnet-mapper.md  22_2026_06_05_agent_validation-removed-and-decode-py.md  23_2026_06_05_agent_debug-mode-subsample.md  24_2026_06_05_agent_samples-output-fix.md  25_2026_06_05_agent_decode-py-reformat.md  README.md  (+4 more)
(+23 files in other folders)
