[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"

[project]
name = "deepshader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "diffusers>=0.37.1",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.9.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
